--- a/0_DS_2022/0_logica_DS_2022/javascript/2_JS/7_Math_Random/index.html
+++ b/0_DS_2022/0_logica_DS_2022/javascript/2_JS/7_Math_Random/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h2>Matemática</h2>
+    <h2>Gerar números aleatórios</h2>
 
-    <p>Gerar números aleatórios:</p>
+    <p>Informe os valores:</p>
 
     Min: <input id="inputMin" type="number" min="0" /> Max:
     <input id="inputMax" type="number" max="100" />
