--- a/0_DS_2022/0_logica_DS_2022/javascript/2_JS/3_Media2Notas_Cond/index.html
+++ b/0_DS_2022/0_logica_DS_2022/javascript/2_JS/3_Media2Notas_Cond/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <h2>Formulário Média de 2 Provas - Condicional</h2>
 
-    <p>Digite a nota1:</p>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Média de 2 Provas</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
-    <input id="input1" type="number" min="0" max="10"/>
+<body>
+  <h2>Formulário para Média de 2 Notas com Condicional</h2>
 
-    <p>Digite a nota2:</p>
+  <p>Digite a nota1:</p>
 
-    <input id="input2" type="number" min="0" max="10"/>
+  <input id="input1" type="number" min="0" max="10" />
 
-    <br />
-    <br />
+  <p>Digite a nota2:</p>
 
-    <button type="button" onclick="myFunction()">OK</button>
+  <input id="input2" type="number" min="0" max="10" />
 
-    <p id="r"></p>
-    <p id="r2"></p>
+  <br />
+  <br />
 
-    <script src="myScript.js"></script>
-  </body>
+  <button type="button" onclick="myFunction()">OK</button>
+
+  <p id="r"></p>
+  <p id="r2"></p>
+
+  <script src="myScript.js"></script>
+</body>
+
 </html>
