--- a/_ESTUDANDO_/server.html
+++ b/_ESTUDANDO_/server.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Olá Mundo</title>
-    <style>
-        h2 {
-            text-align: center;
-            font-size: 4rem;
+    <title>Servidor</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <style>
+        * {
+            border-style: solid;
+            border-color: green;
         }
-    </style>
+    </style> -->
 </head>
-
 <body>
-    <h2>Olá Mundo</h2>
-    <script>
-        console.log("Olá Mundo");
-    </script>
-</body>
 
+    <div class="container">
+        <div class="m-5 p-5 bg-primary text-white text-center rounded">
+            <h3>Bem-vindo ao Servidor Live</h3>
+        </div>
+    </div>
+</body>
 </html>
+
