--- a/2_JavaScript+Node/GUI_Browser/00_LogicaDeProgramacao/1_Javascript_P1_Intro/03_EmojiButtons/index.html
+++ b/2_JavaScript+Node/GUI_Browser/00_LogicaDeProgramacao/1_Javascript_P1_Intro/03_EmojiButtons/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <p id="p1"><br></p>
-    <!-- código emojis -->
-    
-    <p>Como você está?</p>
-    <button onclick="feliz()">feliz</button>
-    <button onclick="nao_sei()">sei lá</button>
-    <button onclick="triste()">triste</button>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <p id="p1"><br /></p>
+        <!-- código emojis -->
 
-    <script src="script.js"></script>
-    
-</body>
+        <p>Como você está?</p>
+        <button onclick="feliz()">feliz</button>
+        <button onclick="nao_sei()">sei lá</button>
+        <button onclick="triste()">triste</button>
+
+        <script src="script.js"></script>
+    </body>
 </html>
