--- a/2_JavaScript+Node/GUI_Browser/00_LogicaDeProgramacao/1_Javascript_P1_Intro/04_Forms/index.html
+++ b/2_JavaScript+Node/GUI_Browser/00_LogicaDeProgramacao/1_Javascript_P1_Intro/04_Forms/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="myScript.js"></script>
-  </head>
-  <body>
-    <p>Digite algo no input abaixo:</p>
-    <input id="input1" />
-    <button type="button" onclick="ok()">OK</button>
-    <p id="p2"></p>
-  </body>
+    <head>
+        <title>Document</title>
+        <link rel="stylesheet" href="style.css" />
+        <script defer src="myScript.js"></script>
+    </head>
+    <body>
+        <p>Digite algo no input abaixo:</p>
+        <input id="input1" />
+        <button onclick="ok()">OK</button>
+        <p id="p2"></p>
+    </body>
 </html>
