--- a/2_JavaScript+Node/GUI_Browser/00_LogicaDeProgramacao/1_Javascript_P1_Intro/04_Forms/index.html
+++ b/2_JavaScript+Node/GUI_Browser/00_LogicaDeProgramacao/1_Javascript_P1_Intro/04_Forms/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <p>Digite algo no input abaixo:</p>
-        <input id="input1" />
+        <input id="entrada" />
         <button onclick="ok()">OK</button>
-        <p id="p2"></p>
+        <p id="saida"></p>
     </body>
 </html>
