--- a/2_JavaScript+Node/GUI_Browser/00_LogicaDeProgramacao/1_Javascript_P1_Intro/04_Forms/index.html
+++ b/2_JavaScript+Node/GUI_Browser/00_LogicaDeProgramacao/1_Javascript_P1_Intro/04_Forms/index.html
@@ -9,6 +9,7 @@
         <p>Digite algo no input abaixo:</p>
         <input id="entrada" />
         <button onclick="ok()">OK</button>
-        <p id="saida"></p>
+        <p id="saida1"></p>
+        <p id="saida2"></p>
     </body>
 </html>
