--- a/2_JavaScript+Node/GUI_Browser/00_LogicaDeProgramacao/1_Javascript_P1_Intro/04_Forms/index.html
+++ b/2_JavaScript+Node/GUI_Browser/00_LogicaDeProgramacao/1_Javascript_P1_Intro/04_Forms/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <title>Document</title>
+        <meta charset="UTF-8" />
         <link rel="stylesheet" href="style.css" />
         <script defer src="myScript.js"></script>
     </head>
