--- a/2_JavaScript+Node/GUI_Browser/00_LogicaDeProgramacao/GAME-Pedra_Papel_Tesoura/index.html
+++ b/2_JavaScript+Node/GUI_Browser/00_LogicaDeProgramacao/GAME-Pedra_Papel_Tesoura/index.html
@@ -12,8 +12,8 @@
 <body>
 
   <h3>GAME-Pedra_Papel_Tesoura</h3>
-  <p id="placar">Placar: <span style="color: rgb(255, 255, 0);">Player</span> 0 vs 0 <span
-      style="color: rgb(255, 255, 0);">Computer</span></p>
+  <p id="placar">Placar: <span style="color: rgb(255, 255, 0); background-color: black;">Player</span> 0 vs 0 <span
+      style="color: rgb(255, 255, 0); background-color: black;">Computer</span></p>
 
   <button id="pedra" onclick="pedra()">👊</button>
   <button id="papel" onclick="papel()">🖐️</button>
